--- a/.gitignore
+++ b/.gitignore
@@ -361,7 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-src/PizzaWeb.Api/pizzas.db
-src/PizzaWeb.Api/pizzas.db-wal
-src/PizzaWeb.Api/pizzas.db-shm
+src/WebApp.Api/pizzas.db
+src/WebApp.Api/pizzas.db-wal
+src/WebApp.Api/pizzas.db-shm
 .sonarqube/
