--- a/src/WebApp.Api/Properties/launchSettings.json
+++ b/src/WebApp.Api/Properties/launchSettings.json
@@ -9,6 +9,13 @@
     }
   },
   "profiles": {
+    "WebApi0": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:5101;http://localhost:5100"
+    },    
     "WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
