--- a/src/WebApp/Dockerfile_alpine
+++ b/src/WebApp/Dockerfile_alpine
@@ -5,16 +5,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build
 WORKDIR /src
-COPY WebApp.Api.csproj ./
-RUN dotnet restore "./WebApp.Api.csproj"
+COPY WebApp.csproj ./
+RUN dotnet restore "./WebApp.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "WebApp.Api.csproj" -c Release -o /app/build
+RUN dotnet build "WebApp.csproj" -c Release -o /app/build
 
 FROM build AS publish
 
 # optimize dotnet publish
-RUN dotnet publish "WebApp.Api.csproj" -c Release -o /app/publish \
+RUN dotnet publish "WebApp.csproj" -c Release -o /app/publish \
   --runtime alpine-x64 \
   --self-contained true \
   /p:PublishTrimmed=true \
@@ -23,4 +23,4 @@ RUN dotnet publish "WebApp.Api.csproj" -c Release -o /app/publish \
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["./WebApp.Api"]
+ENTRYPOINT ["./WebApp"]
