--- a/src/WebApp/Dockerfile_alpine
+++ b/src/WebApp/Dockerfile_alpine
@@ -1,26 +1,29 @@
-FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-
-FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build
+# https://www.thorsten-hans.com/how-to-build-smaller-and-secure-docker-images-for-net5/
+FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS publish
 WORKDIR /src
 COPY WebApp.csproj ./
-RUN dotnet restore "./WebApp.csproj"
+
+RUN dotnet restore "./WebApp.csproj" --runtime alpine-x64
 COPY . .
-WORKDIR "/src/."
-RUN dotnet build "WebApp.csproj" -c Release -o /app/build
-
-FROM build AS publish
-
-# optimize dotnet publish
 RUN dotnet publish "WebApp.csproj" -c Release -o /app/publish \
+  --no-restore \
   --runtime alpine-x64 \
   --self-contained true \
   /p:PublishTrimmed=true \
   /p:PublishSingleFile=true
 
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/runtime-deps:7.0-alpine AS final
+
+RUN adduser --disabled-password \
+  --home /app \
+  --gecos '' dotnetuser && chown -R dotnetuser /app
+
+# upgrade musl to remove potential vulnerability
+RUN apk upgrade musl
+
+USER dotnetuser
 WORKDIR /app
+EXPOSE 5000
 COPY --from=publish /app/publish .
-ENTRYPOINT ["./WebApp"]
+
+ENTRYPOINT ["./WebApp", "--urls", "http://localhost:5000"]
